<resources>

    <!-- Application -->
    <string name="app_name">Dara</string>

    <!-- Button -->
    <string name="button_bar_positive">Add</string>
    <string name="button_bar_negative">Cancel</string>
    <string name="button_bar_neutral">Detail</string>

    <!-- Filter -->
    <string name="filter_title">
        TITLE&#160;&#160;&#160;
    </string>
    <string name="filter_content">
        CONTENT&#160;
    </string>
    <string name="filter_empty">-</string>
    
    <!-- Hint -->
    <string name="hint_title_separator">#Title #keywords</string>
    <string name="hint_title_regular">Title</string>
    <string name="hint_content_separator">#Content #keywords</string>
    <string name="hint_content_regular">Content</string>

    <!-- Label -->
    <string name="label_notification_center">Notification center</string>

    <!-- Menu -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Open app notification</string>

    <!-- Permission -->
    <string name="permission_message">
        Grant permission to shield notifications that you don\'t want to see.
    </string>
    <string name="permission_access">Access</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_detail">Detail</string>
    
    <!-- Subtitle -->
    <string name="subtitle_system_app">System app</string>
    <string name="subtitle_user_app">User app</string>
    
    <!-- Title -->
    <string name="title_regex">RegEx</string>

    <!-- Toast -->
    <string name="toast_rule_add_successful">Add successful</string>
    <string name="toast_rule_add_failed">Add failed</string>
    <string name="toast_rule_delete_successful">Delete successful</string>
    <string name="toast_rule_delete_failed">Delete failed</string>
    <string name="toast_rule_title_count">
        Title rule too long
    </string>
    <string name="toast_rule_title_error">
        Please input meet title rule
    </string>
    <string name="toast_rule_content_count">
        Content rule too long
    </string>
    <string name="toast_rule_content_error">
        Please input meet content rule
    </string>
    <string name="toast_rule_title_content_error">
        Please input meet title or content rule
    </string>

</resources>
