<?xml version="1.0" encoding="utf-8"?>

<io.github.mthli.dara.widget.ButtonBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="52dp">

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="0dp"
            android:text="@string/button_bar_neutral"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
    </android.support.v7.widget.AppCompatButton>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="4dp"
            android:text="@string/button_bar_positive"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
    </android.support.v7.widget.AppCompatButton>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/positive"
            android:text="@string/button_bar_negative"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
    </android.support.v7.widget.AppCompatButton>

</io.github.mthli.dara.widget.ButtonBarLayout>